Favicon, Icons, Bugs
1. Fresh Logo Favicon set
2. Units "null" bug squashed
3. Weather Icons Set
4. NOTE: Weather desciptions TO-DO: read comment in line 366 of Home.js
5.  Read comments in line 315 of Home.js. It explains the error of LocationIQ and it's API
6. Added a bunch of Pexels imgs
7. Started to work on the drag and drop, finish next time.

--- a/Fresh/Home.css
+++ b/Fresh/Home.css
@@ -50,7 +50,7 @@
 	height: 100%;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-image: url("../panjinda-iIqiI5fyZKs-unsplash.jpg")
+	background-image: url("../grassmisty.jpg")
 }
 #radarmain {
 	position: absolute;
@@ -85,6 +85,8 @@
 }
 #desc {
 	position: absolute;
+	overflow: visible;
+	width: 200px;
 	top: 120px;
 	left: 10px;
 	font-size: 30px;
